cloneNode() needs to copy the "style" attr as an HTMLValue, not as a string.  Bug 137428, r=fabian, sr=jst